k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
spec:
  replicas: 3
  revisionHistoryLimit:
  selector:
    matchLabels:
      app: hello-world
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        env: "prod"
        app: "hello-world"
        version: "0.1.0-SNAPSHOT"
    spec:
      containers:
      - name: hello-world
        image: winael/hello-world:0.1.0-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: hello-world
        resources:
          limits:
            cpu: ".5" 
            memory: "200Mi"
          requests: 
            cpu: ".1"
            memory: "100Mi"
