k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world-service
spec:      
  ports:
  - name: hello-world
    port: 81
    targetPort: 8080
  selector:
    app: hello-world
  sessionAffinity: None
  type: ClusterIP
