k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-int
  name: hello-world-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: hello-world-service
          servicePort: 81
        path: "/greeting"
